--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "src/fsps/libfsps"]
 	path = src/fsps/libfsps
-	url = https://github.com/cconroy20/fsps
+	url = https://github.com/stevenrjanssens/fsps
